--- a/index.html
+++ b/index.html
@@ -9,9 +9,35 @@
 </head>
 <body>
     <div class="wrapper">
-        <div id="header">hello</div>
-
+        <div id="header">
+            <!-- ui#nav>li*5>a -->
+           <ul id="nav">
+               <li><a href="">Home</a></li>
+               <li><a href="">Band</a></li>
+               <li><a href="">Tour</a></li>
+               <li><a href="">Contact</a></li>
+               <li>
+                   <a href="">More</a>
+                   <ul class="subnav">
+                       <li>
+                           <a href="">Merchandise</a>
+                        </li>
+                       <li>
+                           <a href="">Media</a>
+                        </li>
+                       <li>
+                           <a href="">Extra</a>
+                        </li>
+                   </ul>
+                </li>
+           </ul>
+        </div>
+            
         <div id="slider"></div>
+
+        <div id="content"></div>
+
+        <div id="footer"></div>
     </div>
 </body>
 </html>
